Update empty map & list in toCAstEntitiy to return java-8 compatible methods